--- a/FontoyXamarin/FontoyXamarin.Android/FontoyXamarin.Android.csproj
+++ b/FontoyXamarin/FontoyXamarin.Android/FontoyXamarin.Android.csproj
@@ -155,5 +155,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\iconAgenda.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\bandeauAccueil.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
