--- a/FontoyXamarin/FontoyXamarin.Android/FontoyXamarin.Android.csproj
+++ b/FontoyXamarin/FontoyXamarin.Android/FontoyXamarin.Android.csproj
@@ -84,9 +84,6 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\iconActu.png" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\FontoyXamarin\FontoyXamarin.csproj">
       <Project>{FD66DFBC-F865-416E-BB3D-0A40486071D7}</Project>
       <Name>FontoyXamarin</Name>
@@ -97,9 +94,6 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\plus.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable\iconFacebook.png" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-xxxhdpi\baseline_menu_white_48.png" />
@@ -153,10 +147,19 @@
     <AndroidResource Include="Resources\drawable\baseline_menu_24.xml" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidResource Include="Resources\drawable\iconActu.png" />
+  </ItemGroup>
+  <ItemGroup>
     <AndroidResource Include="Resources\drawable\iconAgenda.png" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\bandeauAccueil.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\iconFacebook.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\iconAlertes.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
