--- a/FontoyXamarin/FontoyXamarin/FontoyXamarin.csproj
+++ b/FontoyXamarin/FontoyXamarin/FontoyXamarin.csproj
@@ -13,4 +13,8 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\" />
+  </ItemGroup>
 </Project>
